# Domain/Entities/Materia.cs
@@ -1,0 +1,17 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+using System.ComponentModel.DataAnnotations;
+
+namespace Domain.Entities
+{
+    public class Materia
+    {
+        [Key]
+        public int Id_Materia { get; set; }
+        public string Nombre { get; set; }
+        public string Tipo { get; set; }
+    }
+}
