# Infrastructure/DTOs/Mantenimientos/MateriaDto.cs
@@ -1,0 +1,15 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Infrastructure.DTOs.Mantenimientos
+{
+    public class MateriaDto
+    {
+        public int Id_Materia { get; set; }
+        public string Nombre { get; set; }
+        public string Tipo { get; set; }
+    }
+}
